--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,11 +1,47 @@
-h1 {
-  font-family: "Playfair Display", serif;
+:root {
+    --branding-color: #6C63FF ; 
+    --secondary-color: #F9F7FE ;
+    --heading-font-family: "Playfair Display", serif;
+     --default-font-family: "Poppins", sans-serif;
+}
+body {
+    font-family: var(--default-font-family);
+}
+
+
+h1, h2, h3, h4, h5, h6, h7 {
+  font-family: var(--heading-font-family) ;
   font-weight: bold;
 }
-h2 {
-  font-family: "Poppins", sans-serif;
+h1 {
+    font-size: 98px;
+    font-weight: bold;
+}
+p {
   font-weight: normal;
 }
-svg {
-
+.hero {
+    background-color: var(--secondary-color);
+    text-align: center;
+    padding: 160px 20px;
+}
+.hero p {
+    font-size: 36px;
+    font-weight: bold;
+     color: #272142;
+     margin: 0;
+}
+.hero h2 {
+    font-family: var(--heading-font-family);
+   font-weight: normal;
+   font-size: 24px;
+   color: #272142;
+}
+.btn-branding {
+background: var(--branding-color);
+border-radius: 4px;
+color: #FFFFFF;
+font-size: 18px;
+line-height: 27px;
+padding: 15px 30px;
 }
