--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,9 +16,15 @@ h1, h2, h3, h4, h5, h6, h7 {
 h1 {
     font-size: 98px;
     font-weight: bold;
+    line-height: 1.5;
 }
-p {
+h2 {
+    font-size: 64px;
+}
+p { 
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
     background-color: var(--secondary-color);
@@ -44,4 +50,32 @@ color: #FFFFFF;
 font-size: 18px;
 line-height: 27px;
 padding: 15px 30px;
+}
+.btn-branding-outline {
+color: var(--branding-color);
+border: 1px solid var(--branding-color);
+border-radius: 4px;
+font-size: 18px;
+line-height: 27px;
+padding: 15px 30px;
+}
+.product-description {
+    padding: 120px 60px;
+}
+@media (max-width: 900px ) {
+    h1 {
+        font-size: 44px;
+        line-height: 2;
+    }
+    h2 {
+        font-size: 44px;
+        line-height: 1;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
+    .product-description {
+    padding: 0;
+    text-align: center; }
+
 }
