--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,7 +48,7 @@ p {
   font-size: 24px;
   color: #272142;
 }
-.about-section {
+.about-section container {
   padding: 160px 20px;
 }
 .about-section h1 {
@@ -88,11 +88,15 @@ p {
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
-    line-height: 2;
+    line-height: 56px;
   }
   h2 {
     font-size: 44px;
     line-height: 1;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
   .hero {
     padding: 80px 20px;
