--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,21 +48,30 @@ p {
   font-size: 24px;
   color: #272142;
 }
-.about-section container {
+.content-container container {
   padding: 160px 20px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.about-section img {
-  border-radius: 5px;
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+
 }
-.about-section-content {
+.content p {
+  font-size: 14px;
+}
+.content img {
+  border-radius: 20px;
+}
+.content {
   margin: 30px;
 }
 
@@ -94,7 +103,7 @@ p {
     font-size: 44px;
     line-height: 1;
   }
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
