--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -118,6 +118,22 @@ nav a:hover,
 nav li.active a {
   color: var(--branding-color);
 }
+footer {
+    margin: 60px 0;
+}
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+footer .email-link:hover {
+    color: var(--branding-color);
+}
+footer .social-links a {
+    margin: 0 20px;
+    color: var(--branding-color);
+    background-color: var(--secondary-color);
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
