--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -69,8 +69,12 @@ p {
 }
 .content img {
   border-radius: 20px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 .content {
+    display: block;
   margin: 30px;
 }
 
@@ -94,45 +98,45 @@ p {
   padding: 120px 60px;
 }
 .logo {
-    max-height: 40px;
+  max-height: 40px;
 }
 nav {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 nav ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 nav li {
-    display: inline;
-    list-style: none;
-    line-height: 42px;
-    margin-left: 15px;
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
 }
 nav a {
-    text-decoration: none;
-    color: #272142;
-    transition: all 100ms ease-in-out;
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
 }
 nav a:hover,
 nav li.active a {
   color: var(--branding-color);
 }
 footer {
-    margin: 60px 0;
+  margin: 60px 0;
 }
 footer .email-link {
-    text-decoration: none;
-    color: black;
-    font-size: 24px;
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
 }
 footer .email-link:hover {
-    color: var(--branding-color);
+  color: var(--branding-color);
 }
 footer .social-links a {
-    margin: 0 20px;
-    color: var(--branding-color);
-    background-color: var(--secondary-color);
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
 }
 @media (max-width: 900px) {
   h1 {
@@ -155,6 +159,6 @@ footer .social-links a {
     text-align: center;
   }
   nav a {
-      font-size: 14px;
+    font-size: 14px;
   }
 }
