--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,6 +26,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+    font-size: 48px;
+}
 p {
   font-weight: normal;
   font-size: 16px;
@@ -125,6 +128,16 @@ nav li.active a {
 footer {
   margin: 60px 0;
 }
+footer .contact-box {
+    background: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box p { 
+    margin: 0 ;
+}
+
+
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -137,7 +150,16 @@ footer .social-links a {
   margin: 0 20px;
   color: var(--branding-color);
   background-color: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
 }
+footer .social-links a:hover {
+    color: white;
+    background-color: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -146,6 +168,9 @@ footer .social-links a {
   h2 {
     font-size: 44px;
     line-height: 1;
+  }
+  h4 {
+      font-size: 26px;
   }
   .content {
     text-align: center;
