--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -98,10 +98,14 @@ p {
   padding: 15px 30px;
 }
 .product-description {
-  padding: 120px 60px;
+  padding: 40px 20px;
 }
 .logo {
-  max-height: 40px;
+  max-height: 50px;
+  max-width: 50px;
+}
+.sub-img {
+    text-align: center;
 }
 nav {
   padding: 20px 0;
@@ -175,6 +179,10 @@ footer .social-links a:hover {
   .content {
     text-align: center;
     padding: 0;
+  }
+  .content h1 {
+      font-size: 44px;
+      line-height: 1;
   }
   
   .product-description {
