--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,7 +27,7 @@ h2 {
   font-size: 64px;
 }
 h3 {
-    font-size: 48px;
+  font-size: 48px;
 }
 p {
   font-weight: normal;
@@ -70,14 +70,14 @@ p {
 .content p {
   font-size: 14px;
 }
-.content img {
+img  {
   border-radius: 20px;
   display: block;
   margin-right: auto;
   margin-left: auto;
 }
 .content {
-    display: block;
+  display: block;
   margin: 30px;
 }
 
@@ -104,9 +104,7 @@ p {
   max-height: 50px;
   max-width: 50px;
 }
-.sub-img {
-    text-align: center;
-}
+
 nav {
   padding: 20px 0;
 }
@@ -133,14 +131,13 @@ footer {
   margin: 60px 0;
 }
 footer .contact-box {
-    background: var(--secondary-color);
-    padding: 30px 120px;
-    border-radius: 10px;
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
 }
-footer .contact-box p { 
-    margin: 0 ;
+footer .contact-box p {
+  margin: 0;
 }
-
 
 footer .email-link {
   text-decoration: none;
@@ -160,8 +157,8 @@ footer .social-links a {
   transition: all 100ms ease-in-out;
 }
 footer .social-links a:hover {
-    color: white;
-    background-color: var(--branding-color);
+  color: white;
+  background-color: var(--branding-color);
 }
 
 @media (max-width: 900px) {
@@ -174,17 +171,17 @@ footer .social-links a:hover {
     line-height: 1;
   }
   h3 {
-      font-size: 26px;
+    font-size: 26px;
   }
   .content {
     text-align: center;
     padding: 0;
   }
   .content h1 {
-      font-size: 44px;
-      line-height: 1;
+    font-size: 44px;
+    line-height: 1;
   }
-  
+
   .product-description {
     padding: 0;
     text-align: center;
