--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,12 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+img {
+  border-radius: 20px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -55,6 +61,7 @@ p {
   padding: 60px 20px;
 }
 .content h1 {
+  text-align: center;
   font-size: 64px;
   line-height: 80px;
 }
@@ -70,13 +77,12 @@ p {
 .content p {
   font-size: 14px;
 }
-img  {
-  border-radius: 20px;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
+.content p .about-me {
+    font-family: var(--heading-font-family);
+  font-size: 50px;
 }
 .content {
+  text-align: center;
   display: block;
   margin: 30px;
 }
